[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/user_interface/QbitViewBt.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/gameplay/Qbit_view/QbitView.gd" type="Script" id=2]

[node name="QbitView" type="Control"]
margin_right = 847.0
margin_bottom = 816.0
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QbitViewBt" parent="." instance=ExtResource( 1 )]
margin_left = 178.0
margin_top = 24.0
margin_right = 662.0
margin_bottom = 103.0

[node name="Spheres" type="Control" parent="."]
margin_top = 190.0
margin_right = 847.0
margin_bottom = 815.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Matrices" type="Control" parent="."]
margin_top = 190.0
margin_right = 847.0
margin_bottom = 815.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="matrix_view_selected" from="QbitViewBt" to="." method="showMatrixView"]
[connection signal="sphere_view_selected" from="QbitViewBt" to="." method="showSphereView"]
[connection signal="gui_input" from="Spheres" to="." method="_on_Spheres_gui_input"]
